--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
                 </div>
             </div>
         </section>
+
+        <!-- What I Do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur laudantium sapiente pariatur eius, iure adipisci?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Mollitia rem tempora modi vel, eius ipsam praesentium est porro facilis. Ratione possimus pariatur voluptatem?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDb</p>
+                    <p class="skill-description">Ab numquam in est ipsa nam repudiandae ducimus odit? Saepe doloribus autem provident totam asperiores?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
+                    <p class="skill-description">Inventore doloribus iste illum hic dolorem beatae laborum nisi cum reiciendis? Expedita doloremque cum fugit?</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Resume section  -->
+        <section class="resume">
+            <h3 class="section-title">A Summary of My Resume</h3>
+        </section>
     </main>
     <footer>
 
